--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,14 @@ tokenizers==0.13.3
 
 # Utilities
 python-dateutil==2.8.2
+
+# Web Framework
+fastapi==0.104.1
+uvicorn==0.24.0
+
+# Validation
+pydantic==2.5.0
+
+# HTTP Client (for async requests if needed)
+httpx==0.25.2
+
